_sass/_elevate_theme.scss
@charset "utf-8";

$off-white: #fbf9f3;
$greyish-brown: #4a4a4a;
$maize: #ebb660;
$avocado: #b9c02f;
$grey-blue: #7a92ae;
$pale-blue: #dee4ea;
$pale-blue-50: rgba(222, 228, 234, 0.5);
$dark-grey: #53545b;

$base-font-family: 'Montserrat', sans-serif !default;
$base-font-size:   16px !default;
$base-font-weight: 400 !default;
$small-font-size:  $base-font-size * 0.875 !default;
$base-line-height: 1.5 !default;

$spacing-unit:     30px !default;

$text-color:       $greyish-brown !default;
$background-color: $off-white !default;
$brand-color:      $avocado !default;

$table-text-align: left !default;

// Width of the content area
$content-width:    800px !default;

$on-palm:          600px !default;
$on-laptop:        800px !default;


.clickable {
  cursor: pointer;
}

@mixin hide-text {
  overflow: hidden;
  text-indent: 101%;
  white-space: nowrap;
}

.hide-text {
  @include hide-text;
}

body, html {
    box-sizing: border-box;
}
* {
    box-sizing: inherit;
}

// Use media queries like this:
// @include media-query($on-palm) {
//   .wrapper {
//     padding-right: $spacing-unit / 2;
//     padding-left: $spacing-unit / 2;
//   }
// }
@mixin media-query($device) {
  @media screen and (max-width: $device) {
    @content;
  }
}

@mixin relative-font-size($ratio) {
  font-size: $base-font-size * $ratio;
}

// Import partials.
@import
  "elevate_theme/base",
  "elevate_theme/typography",
  "elevate_theme/layout",
  "elevate_theme/modal"
;

